feat: added play/stop and pause/unpause buttons, added separate input listener for editor GUI, fixed bugs

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=6,143
-Size=429,570
+Pos=7,226
+Size=374,489
 Collapsed=0
 DockId=0x00000001,0
 
@@ -31,14 +31,16 @@ Size=283,361
 Collapsed=0
 
 [Window][Inspector]
-Pos=1007,235
-Size=265,481
+Pos=994,371
+Size=280,343
 Collapsed=0
+DockId=0x00000004,0
 
 [Window][Hierarchy]
-Pos=724,235
-Size=280,481
+Pos=994,22
+Size=280,347
 Collapsed=0
+DockId=0x00000003,0
 
 [Window][Dear ImGui Metrics/Debugger]
 Pos=286,138
@@ -52,5 +54,8 @@ Column 1  Width=56
 Column 2  Width=56
 
 [Docking][Data]
-DockNode  ID=0x00000001 Pos=6,143 Size=429,570 Selected=0xE87781F4
+DockNode    ID=0x00000001 Pos=7,226 Size=374,489 Selected=0xE87781F4
+DockNode    ID=0x00000002 Pos=994,22 Size=280,692 Split=Y
+  DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=280,241 Selected=0x29EABFBD
+  DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=280,238 Selected=0xE7039252
 
