feat: created Game window, deprecated Component::FrameEnd, refactored engine loop

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=7,226
+Pos=0,498
 Size=374,489
 Collapsed=0
 DockId=0x00000001,0
@@ -15,8 +15,8 @@ Size=1280,701
 Collapsed=0
 
 [Window][Example: Auto-resizing window]
-Pos=60,60
-Size=451,233
+Pos=395,114
+Size=451,199
 Collapsed=0
 
 [Window][Example: Constrained Resize]
@@ -31,20 +31,33 @@ Size=283,361
 Collapsed=0
 
 [Window][Inspector]
-Pos=994,371
-Size=280,343
+Pos=1636,23
+Size=280,964
 Collapsed=0
-DockId=0x00000004,0
 
 [Window][Hierarchy]
-Pos=994,22
-Size=280,347
+Pos=1354,23
+Size=280,964
 Collapsed=0
-DockId=0x00000003,0
 
 [Window][Dear ImGui Metrics/Debugger]
 Pos=286,138
 Size=339,358
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=81,51
+Size=623,414
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=60,60
+Size=607,944
+Collapsed=0
+
+[Window][Game]
+Pos=1,23
+Size=1351,798
 Collapsed=0
 
 [Table][0xA43C3885,3]
@@ -54,8 +67,5 @@ Column 1  Width=56
 Column 2  Width=56
 
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=7,226 Size=374,489 Selected=0xE87781F4
-DockNode    ID=0x00000002 Pos=994,22 Size=280,692 Split=Y
-  DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=280,241 Selected=0x29EABFBD
-  DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=280,238 Selected=0xE7039252
+DockNode  ID=0x00000001 Pos=0,498 Size=374,489 Selected=0xE87781F4
 
