--- a/imgui.ini
+++ b/imgui.ini
@@ -4,14 +4,14 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,498
-Size=374,489
+Pos=1600,488
+Size=320,503
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000009,0
 
 [Window][DockSpace Demo]
 Pos=0,19
-Size=1280,701
+Size=1920,972
 Collapsed=0
 
 [Window][Example: Auto-resizing window]
@@ -23,7 +23,7 @@ Collapsed=0
 Pos=503,86
 Size=701,630
 Collapsed=0
-DockId=0x00000001,1
+DockId=0x00000002,1
 
 [Window][Dear ImGui Debug Log]
 Pos=31,308
@@ -31,19 +31,22 @@ Size=283,361
 Collapsed=0
 
 [Window][Inspector]
-Pos=1636,23
-Size=280,964
+Pos=1600,38
+Size=320,448
 Collapsed=0
+DockId=0x00000008,0
 
 [Window][Hierarchy]
-Pos=1354,23
-Size=280,964
+Pos=1282,38
+Size=316,953
 Collapsed=0
+DockId=0x00000001,0
 
 [Window][Dear ImGui Metrics/Debugger]
-Pos=286,138
-Size=339,358
+Pos=0,19
+Size=338,972
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][Example: Custom rendering]
 Pos=81,51
@@ -56,9 +59,26 @@ Size=607,944
 Collapsed=0
 
 [Window][Game]
-Pos=1,23
-Size=1351,798
+Pos=0,38
+Size=1280,758
 Collapsed=0
+DockId=0x00000003,0
+
+[Window][Example: Console]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Window][WindowOverViewport_11111111]
+Pos=0,19
+Size=1920,972
+Collapsed=0
+
+[Window][Scene]
+Pos=0,798
+Size=1280,193
+Collapsed=0
+DockId=0x00000004,0
 
 [Table][0xA43C3885,3]
 RefScale=13
@@ -67,5 +87,16 @@ Column 1  Width=56
 Column 2  Width=56
 
 [Docking][Data]
-DockNode  ID=0x00000001 Pos=0,498 Size=374,489 Selected=0xE87781F4
+DockSpace       ID=0x7C6B3D9B Pos=0,19 Size=1920,972 Split=Y
+  DockNode      ID=0x00000002 Parent=0x7C6B3D9B SizeRef=1920,444
+  DockNode      ID=0x0000000A Parent=0x7C6B3D9B SizeRef=0,0 CentralNode=1
+DockSpace       ID=0xB39CBE7A Window=0x1F1A625A Pos=0,38 Size=1920,953 Split=X
+  DockNode      ID=0x00000005 Parent=0xB39CBE7A SizeRef=1280,744 Split=Y Selected=0x26816F31
+    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1280,758 CentralNode=1 Selected=0x26816F31
+    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1280,193 Selected=0xE192E354
+  DockNode      ID=0x00000006 Parent=0xB39CBE7A SizeRef=638,744 Split=X Selected=0xE7039252
+    DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=316,953 Selected=0x29EABFBD
+    DockNode    ID=0x00000007 Parent=0x00000006 SizeRef=320,953 Split=Y Selected=0xE7039252
+      DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=320,448 Selected=0xE7039252
+      DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=320,503 Selected=0xE87781F4
 
