feat: added free or fixed resolutions to game view

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1600,488
-Size=320,503
+Pos=1600,462
+Size=320,529
 Collapsed=0
 DockId=0x00000009,0
 
@@ -31,14 +31,14 @@ Size=283,361
 Collapsed=0
 
 [Window][Inspector]
-Pos=1600,38
-Size=320,448
+Pos=1600,52
+Size=320,408
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Hierarchy]
-Pos=1282,38
-Size=316,953
+Pos=1282,52
+Size=316,939
 Collapsed=0
 DockId=0x00000001,0
 
@@ -59,7 +59,7 @@ Size=607,944
 Collapsed=0
 
 [Window][Game]
-Pos=0,38
+Pos=0,52
 Size=1280,758
 Collapsed=0
 DockId=0x00000003,0
@@ -75,10 +75,15 @@ Size=1920,972
 Collapsed=0
 
 [Window][Scene]
-Pos=0,798
-Size=1280,193
+Pos=0,812
+Size=1280,179
 Collapsed=0
 DockId=0x00000004,0
+
+[Window][Example: Property editor]
+Pos=282,211
+Size=430,450
+Collapsed=0
 
 [Table][0xA43C3885,3]
 RefScale=13
@@ -86,17 +91,21 @@ Column 0  Width=56
 Column 1  Width=56
 Column 2  Width=56
 
+[Table][0xD181190E,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
 [Docking][Data]
 DockSpace       ID=0x7C6B3D9B Pos=0,19 Size=1920,972 Split=Y
   DockNode      ID=0x00000002 Parent=0x7C6B3D9B SizeRef=1920,444
   DockNode      ID=0x0000000A Parent=0x7C6B3D9B SizeRef=0,0 CentralNode=1
-DockSpace       ID=0xB39CBE7A Window=0x1F1A625A Pos=0,38 Size=1920,953 Split=X
+DockSpace       ID=0xB39CBE7A Window=0x1F1A625A Pos=0,52 Size=1920,939 Split=X
   DockNode      ID=0x00000005 Parent=0xB39CBE7A SizeRef=1280,744 Split=Y Selected=0x26816F31
     DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1280,758 CentralNode=1 Selected=0x26816F31
-    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1280,193 Selected=0xE192E354
+    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1280,179 Selected=0xE192E354
   DockNode      ID=0x00000006 Parent=0xB39CBE7A SizeRef=638,744 Split=X Selected=0xE7039252
     DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=316,953 Selected=0x29EABFBD
     DockNode    ID=0x00000007 Parent=0x00000006 SizeRef=320,953 Split=Y Selected=0xE7039252
-      DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=320,448 Selected=0xE7039252
-      DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=320,503 Selected=0xE87781F4
+      DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=320,408 Selected=0xE7039252
+      DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=320,529 Selected=0xE87781F4
 
