--- a/imgui.ini
+++ b/imgui.ini
@@ -4,10 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1600,462
-Size=320,529
+Pos=513,241
+Size=345,529
 Collapsed=0
-DockId=0x00000009,0
 
 [Window][DockSpace Demo]
 Pos=0,19
@@ -31,14 +30,14 @@ Size=283,361
 Collapsed=0
 
 [Window][Inspector]
-Pos=1600,52
-Size=320,408
+Pos=1487,52
+Size=433,939
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000007,0
 
 [Window][Hierarchy]
 Pos=1282,52
-Size=316,939
+Size=203,939
 Collapsed=0
 DockId=0x00000001,0
 
@@ -81,9 +80,26 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Example: Property editor]
-Pos=282,211
+Pos=282,212
 Size=430,450
 Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=60,60
+Size=500,440
+Collapsed=0
+
+[Window][Example: Simple layout/left pane_AED60EF8]
+IsChild=1
+Size=150,386
+
+[Window][Dear ImGui Demo/ResizableChild_D5443E47]
+IsChild=1
+Size=269,136
+
+[Window][Dear ImGui Demo/Red_1D4E05CE]
+IsChild=1
+Size=200,100
 
 [Table][0xA43C3885,3]
 RefScale=13
@@ -96,16 +112,14 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace       ID=0x7C6B3D9B Pos=0,19 Size=1920,972 Split=Y
-  DockNode      ID=0x00000002 Parent=0x7C6B3D9B SizeRef=1920,444
-  DockNode      ID=0x0000000A Parent=0x7C6B3D9B SizeRef=0,0 CentralNode=1
-DockSpace       ID=0xB39CBE7A Window=0x1F1A625A Pos=0,52 Size=1920,939 Split=X
-  DockNode      ID=0x00000005 Parent=0xB39CBE7A SizeRef=1280,744 Split=Y Selected=0x26816F31
-    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1280,758 CentralNode=1 Selected=0x26816F31
-    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1280,179 Selected=0xE192E354
-  DockNode      ID=0x00000006 Parent=0xB39CBE7A SizeRef=638,744 Split=X Selected=0xE7039252
-    DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=316,953 Selected=0x29EABFBD
-    DockNode    ID=0x00000007 Parent=0x00000006 SizeRef=320,953 Split=Y Selected=0xE7039252
-      DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=320,408 Selected=0xE7039252
-      DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=320,529 Selected=0xE87781F4
+DockSpace     ID=0x7C6B3D9B Pos=0,19 Size=1920,972 Split=Y
+  DockNode    ID=0x00000002 Parent=0x7C6B3D9B SizeRef=1920,444
+  DockNode    ID=0x0000000A Parent=0x7C6B3D9B SizeRef=0,0 CentralNode=1
+DockSpace     ID=0xB39CBE7A Window=0x1F1A625A Pos=0,52 Size=1920,939 Split=X
+  DockNode    ID=0x00000005 Parent=0xB39CBE7A SizeRef=1280,744 Split=Y Selected=0x26816F31
+    DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=1280,758 CentralNode=1 Selected=0x26816F31
+    DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=1280,179 Selected=0xE192E354
+  DockNode    ID=0x00000006 Parent=0xB39CBE7A SizeRef=638,744 Split=X Selected=0xE7039252
+    DockNode  ID=0x00000001 Parent=0x00000006 SizeRef=203,953 Selected=0x29EABFBD
+    DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=433,953 Selected=0xE7039252
 
