feat: serialized strings, finished serializing classes, added mouse wrap while dragging, added Preferences window, slightly refactored engine start

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,9 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=513,241
-Size=345,529
+Pos=1487,524
+Size=433,467
 Collapsed=0
+DockId=0x00000009,0
 
 [Window][DockSpace Demo]
 Pos=0,19
@@ -22,7 +23,7 @@ Collapsed=0
 Pos=503,86
 Size=701,630
 Collapsed=0
-DockId=0x00000002,1
+DockId=0x7C6B3D9B,1
 
 [Window][Dear ImGui Debug Log]
 Pos=31,308
@@ -31,9 +32,9 @@ Collapsed=0
 
 [Window][Inspector]
 Pos=1487,52
-Size=433,939
+Size=433,470
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000008,0
 
 [Window][Hierarchy]
 Pos=1282,52
@@ -42,10 +43,9 @@ Collapsed=0
 DockId=0x00000001,0
 
 [Window][Dear ImGui Metrics/Debugger]
-Pos=0,19
+Pos=1513,81
 Size=338,972
 Collapsed=0
-DockId=0x00000002,0
 
 [Window][Example: Custom rendering]
 Pos=81,51
@@ -80,7 +80,7 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Example: Property editor]
-Pos=282,212
+Pos=282,213
 Size=430,450
 Collapsed=0
 
@@ -95,11 +95,16 @@ Size=150,386
 
 [Window][Dear ImGui Demo/ResizableChild_D5443E47]
 IsChild=1
-Size=269,136
+Size=494,136
 
 [Window][Dear ImGui Demo/Red_1D4E05CE]
 IsChild=1
 Size=200,100
+
+[Window][Preferences]
+Pos=1038,282
+Size=881,456
+Collapsed=0
 
 [Table][0xA43C3885,3]
 RefScale=13
@@ -112,14 +117,14 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace     ID=0x7C6B3D9B Pos=0,19 Size=1920,972 Split=Y
-  DockNode    ID=0x00000002 Parent=0x7C6B3D9B SizeRef=1920,444
-  DockNode    ID=0x0000000A Parent=0x7C6B3D9B SizeRef=0,0 CentralNode=1
-DockSpace     ID=0xB39CBE7A Window=0x1F1A625A Pos=0,52 Size=1920,939 Split=X
-  DockNode    ID=0x00000005 Parent=0xB39CBE7A SizeRef=1280,744 Split=Y Selected=0x26816F31
-    DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=1280,758 CentralNode=1 Selected=0x26816F31
-    DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=1280,179 Selected=0xE192E354
-  DockNode    ID=0x00000006 Parent=0xB39CBE7A SizeRef=638,744 Split=X Selected=0xE7039252
-    DockNode  ID=0x00000001 Parent=0x00000006 SizeRef=203,953 Selected=0x29EABFBD
-    DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=433,953 Selected=0xE7039252
+DockSpace       ID=0x7C6B3D9B Pos=0,19 Size=1920,972 CentralNode=1
+DockSpace       ID=0xB39CBE7A Window=0x1F1A625A Pos=0,52 Size=1920,939 Split=X
+  DockNode      ID=0x00000005 Parent=0xB39CBE7A SizeRef=1280,744 Split=Y Selected=0x26816F31
+    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1280,758 CentralNode=1 Selected=0x26816F31
+    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1280,179 Selected=0xE192E354
+  DockNode      ID=0x00000006 Parent=0xB39CBE7A SizeRef=638,744 Split=X Selected=0xE7039252
+    DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=203,953 Selected=0x29EABFBD
+    DockNode    ID=0x00000007 Parent=0x00000006 SizeRef=433,953 Split=Y Selected=0xE7039252
+      DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=433,470 Selected=0xE7039252
+      DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=433,467 Selected=0xE87781F4
 
