--- a/imgui.ini
+++ b/imgui.ini
@@ -4,10 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1487,524
-Size=433,467
+Pos=1497,641
+Size=423,350
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x00000008,0
 
 [Window][DockSpace Demo]
 Pos=0,19
@@ -31,21 +31,22 @@ Size=283,361
 Collapsed=0
 
 [Window][Inspector]
-Pos=1487,52
-Size=433,470
+Pos=1497,52
+Size=423,587
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000009,0
 
 [Window][Hierarchy]
 Pos=1282,52
-Size=203,939
+Size=213,939
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Dear ImGui Metrics/Debugger]
-Pos=1513,81
-Size=338,972
+Pos=1497,545
+Size=423,94
 Collapsed=0
+DockId=0x0000000A,0
 
 [Window][Example: Custom rendering]
 Pos=81,51
@@ -53,13 +54,13 @@ Size=623,414
 Collapsed=0
 
 [Window][Example: Documents]
-Pos=60,60
+Pos=61,63
 Size=607,944
 Collapsed=0
 
 [Window][Game]
-Pos=0,52
-Size=1280,758
+Pos=0,526
+Size=1280,465
 Collapsed=0
 DockId=0x00000003,0
 
@@ -74,10 +75,10 @@ Size=1920,972
 Collapsed=0
 
 [Window][Scene]
-Pos=0,812
-Size=1280,179
+Pos=0,52
+Size=1280,472
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000002,0
 
 [Window][Example: Property editor]
 Pos=282,213
@@ -106,6 +107,22 @@ Pos=1038,282
 Size=881,456
 Collapsed=0
 
+[Window][Eggplant]
+Pos=68,156
+Size=591,840
+Collapsed=0
+DockId=0xA086D808,0
+
+[Window][Dear ImGui ID Stack Tool]
+Pos=176,165
+Size=418,245
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+Pos=60,60
+Size=353,966
+Collapsed=0
+
 [Table][0xA43C3885,3]
 RefScale=13
 Column 0  Width=56
@@ -117,14 +134,17 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace       ID=0x7C6B3D9B Pos=0,19 Size=1920,972 CentralNode=1
-DockSpace       ID=0xB39CBE7A Window=0x1F1A625A Pos=0,52 Size=1920,939 Split=X
-  DockNode      ID=0x00000005 Parent=0xB39CBE7A SizeRef=1280,744 Split=Y Selected=0x26816F31
-    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1280,758 CentralNode=1 Selected=0x26816F31
-    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1280,179 Selected=0xE192E354
-  DockNode      ID=0x00000006 Parent=0xB39CBE7A SizeRef=638,744 Split=X Selected=0xE7039252
-    DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=203,953 Selected=0x29EABFBD
-    DockNode    ID=0x00000007 Parent=0x00000006 SizeRef=433,953 Split=Y Selected=0xE7039252
-      DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=433,470 Selected=0xE7039252
-      DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=433,467 Selected=0xE87781F4
+DockSpace         ID=0x7C6B3D9B Pos=0,19 Size=1920,972 CentralNode=1
+DockSpace         ID=0xA086D808 Pos=68,156 Size=591,840 CentralNode=1 Selected=0x55C95B2C
+DockSpace         ID=0xB39CBE7A Window=0x1F1A625A Pos=0,52 Size=1920,939 Split=X
+  DockNode        ID=0x00000005 Parent=0xB39CBE7A SizeRef=1280,744 Split=Y Selected=0xE192E354
+    DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=1280,472 CentralNode=1 Selected=0xE192E354
+    DockNode      ID=0x00000003 Parent=0x00000005 SizeRef=1280,465 Selected=0x26816F31
+  DockNode        ID=0x00000006 Parent=0xB39CBE7A SizeRef=638,744 Split=X Selected=0xE7039252
+    DockNode      ID=0x00000001 Parent=0x00000006 SizeRef=213,953 Selected=0x29EABFBD
+    DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=423,953 Split=Y Selected=0xE7039252
+      DockNode    ID=0x00000004 Parent=0x00000007 SizeRef=423,587 Split=Y Selected=0xE7039252
+        DockNode  ID=0x00000009 Parent=0x00000004 SizeRef=423,491 Selected=0xE7039252
+        DockNode  ID=0x0000000A Parent=0x00000004 SizeRef=423,94 Selected=0x20E3C5EA
+      DockNode    ID=0x00000008 Parent=0x00000007 SizeRef=423,350 Selected=0xE87781F4
 
