feat: added scene serialization, along with enum serialization

--- a/imgui.ini
+++ b/imgui.ini
@@ -123,6 +123,11 @@ Pos=172,129
 Size=1114,521
 Collapsed=0
 
+[Window][Save?]
+Pos=807,405
+Size=305,181
+Collapsed=0
+
 [Table][0xA43C3885,3]
 RefScale=13
 Column 0  Width=56
