feat: removed Transform manual rotation, reworked Camera::Set(), added creation and deletion of Transforms in the hierarchy and components in the Inspector

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1497,641
-Size=423,350
+Pos=1497,671
+Size=423,320
 Collapsed=0
 DockId=0x00000008,0
 
@@ -32,7 +32,7 @@ Collapsed=0
 
 [Window][Inspector]
 Pos=1497,52
-Size=423,587
+Size=423,617
 Collapsed=0
 DockId=0x00000009,0
 
@@ -59,8 +59,8 @@ Size=607,944
 Collapsed=0
 
 [Window][Game]
-Pos=0,466
-Size=1280,525
+Pos=0,433
+Size=1280,558
 Collapsed=0
 DockId=0x00000003,0
 
@@ -76,7 +76,7 @@ Collapsed=0
 
 [Window][Scene]
 Pos=0,52
-Size=1280,412
+Size=1280,379
 Collapsed=0
 DockId=0x00000002,0
 
@@ -128,6 +128,21 @@ Pos=807,405
 Size=305,181
 Collapsed=0
 
+[Window][Delete?]
+Pos=804,443
+Size=311,105
+Collapsed=0
+
+[Window][Stacked 1]
+Pos=755,409
+Size=409,172
+Collapsed=0
+
+[Window][Stacked 2]
+Pos=847,460
+Size=226,71
+Collapsed=0
+
 [Table][0xA43C3885,3]
 RefScale=13
 Column 0  Width=56
@@ -143,13 +158,13 @@ DockSpace         ID=0x7C6B3D9B Pos=0,19 Size=1920,972 CentralNode=1
 DockSpace         ID=0xA086D808 Pos=68,156 Size=591,840 CentralNode=1 Selected=0x55C95B2C
 DockSpace         ID=0xB39CBE7A Window=0x1F1A625A Pos=0,52 Size=1920,939 Split=X
   DockNode        ID=0x00000005 Parent=0xB39CBE7A SizeRef=1280,744 Split=Y Selected=0x26816F31
-    DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=1280,412 Selected=0xE192E354
-    DockNode      ID=0x00000003 Parent=0x00000005 SizeRef=1280,525 CentralNode=1 Selected=0x26816F31
+    DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=1280,379 Selected=0xE192E354
+    DockNode      ID=0x00000003 Parent=0x00000005 SizeRef=1280,558 CentralNode=1 Selected=0x26816F31
   DockNode        ID=0x00000006 Parent=0xB39CBE7A SizeRef=638,744 Split=X Selected=0xE7039252
     DockNode      ID=0x00000001 Parent=0x00000006 SizeRef=213,953 Selected=0x29EABFBD
     DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=423,953 Split=Y Selected=0xE7039252
-      DockNode    ID=0x00000004 Parent=0x00000007 SizeRef=423,587 Split=Y Selected=0xE7039252
+      DockNode    ID=0x00000004 Parent=0x00000007 SizeRef=423,617 Split=Y Selected=0xE7039252
         DockNode  ID=0x00000009 Parent=0x00000004 SizeRef=423,491 Selected=0xE7039252
         DockNode  ID=0x0000000A Parent=0x00000004 SizeRef=423,94 Selected=0x20E3C5EA
-      DockNode    ID=0x00000008 Parent=0x00000007 SizeRef=423,350 Selected=0xE87781F4
+      DockNode    ID=0x00000008 Parent=0x00000007 SizeRef=423,320 Selected=0xE87781F4
 
